End of the day commit

--- a/gREM_ms_16072014_new.tex
+++ b/gREM_ms_16072014_new.tex
@@ -115,7 +115,7 @@ Sensor technology, such as camera traps \citep{rowcliffe2008surveys, karanth1995
 %REM developed for camera trap data, doesnt need this assumptions 
 %but has limitations
 %Specifically sensor widths - different environments might need more flexibility (examples) and signal directionality assumptions (examples) - method has been optimised for terrestrial large animals
-Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated (e.g., capture-mark recapture methods \citep{karanth1995estimating} and distance sampling \citep{harris2013applying}). However, these methods often require additional information that may not be available. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2003estimation, soisalo2006estimating, trolle2007camera} require recognition of individuals; distance methods require a distance estimation of how far away individuals are from the sensor {barlow2005estimates, marques2011estimating}. The development of the random encounter model (REM) (a modification of a gas model) enabled animal densities to be estimated from unmarked individuals of a known speed, and sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (for example acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading (ref). % Find this ref is tricky!
+Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated (e.g., capture-mark recapture methods \citep{karanth1995estimating} and distance sampling \citep{harris2013applying}). However, these methods often require additional information that may not be available. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2003estimation, soisalo2006estimating, trolle2007camera} require recognition of individuals; distance methods require a distance estimation of how far away individuals are from the sensor {barlow2005estimates, marques2011estimating}. The development of the random encounter model (REM) (a modification of a gas model) enabled animal densities to be estimated from unmarked individuals of a known speed, and sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (for example acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
 
 Whilst these restrictions are not problematic for most camera trap makes (e.g. Reconyx, Cuddeback), the REM could not be used to estimate densities from camera traps with a wider sensor width (e.g. canopy monitoring with fish eye lens \citep{brusa2014increasing}). Additionally, the REM method would not be useful in estimating densities from acoustic survey data as the acoustic detector angles are often wider than $\pi/2$ radians.  Acoustic detectors are designed for a range of diverse tasks and environments \citep{kessel2014review}, which will naturally lead to a wide range of sensor detection widths and detection distances. In addition to this, calls emitted by many animals are directional (breaking the assumption of the REM method). 
 
@@ -152,7 +152,7 @@ Following \cite{yapp1956theory}, we derive the gas model where sensors can captu
 In order to derive animal density, we need to consider relative velocity from the reference frame of the animals. Conceptually, this requires us to imagine that all animals are stationary and randomly distributed in space, while the sensor moves with velocity $v$. If we calculate the area covered by the sensor during the survey period we can estimate the number of animals the sensor should capture. As a circle moving across a plane, the area covered by the sensor per unit time is $2rv$. The number of expected captures, $z$, for a survey period of $t$, with an animal density of $D$ is $z = 2rvtD$. To estimate the density, we rearrange to get $D = z/2rvt$.
 
 \subsubsection{gREM derivations for different detection and signal widths}
-Different combinations of $\theta$ and $\alpha$ would be expected to occur (e.g., sensors have different detection widths and animals have different signal widths). For different combinations $\theta$ and $\alpha$, the area covered per unit time is no longer given by $2rv$. Instead of the size of the sensor detection zone having a diameter of $2r$, the size changes with the approach angle between the sensor and the animal. For any given signal width and detector width and depending on the angle that the animal approaches the sensor, the width of the area within which an animal can be detected is called the profile, $p$. The size of the profile (averaged across all approach angles) is defined as the average profile $\bar{p}$. However, different combinations of $\theta$ and $\alpha$ need different equations to calcuate $\bar{p}$. 
+Different combinations of $\theta$ and $\alpha$ would be expected to occur (e.g., sensors have different detection widths and animals have different signal widths). For different combinations $\theta$ and $\alpha$, the area covered per unit time is no longer given by $2rv$. Instead of the size of the sensor detection zone having a diameter of $2r$, the size changes with the approach angle between the sensor and the animal. For any given signal width and detector width and depending on the angle that the animal approaches the sensor, the width of the area within which an animal can be detected is called the profile, $p$. The size of the profile (averaged across all approach angles) is defined as the average profile $\bar{p}$. However, different combinations of $\theta$ and $\alpha$ need different equations to calculate $\bar{p}$. 
 
 \begin{figure}
 \centering
@@ -218,16 +218,16 @@ D = z/vt\bar{p}
 
 
 %fix this @Tim
-gREM submodels differ discontinuously (figure 2) at differnt combinations of alpha and theta because the number and nature of intervals needed to describe the average profile width changes.  
+gREM submodels differ discontinuously (figure 2) at different combinations of $\alpha$ and $\theta$ because the number and nature of intervals needed to describe the average profile width changes.  
 Examine the profile at $x_1 = 	\theta/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin \alpha/2$ while the right side is zero. This profile does not exist if we return to the full $2r\sin \alpha/2$ profile before $x_1  = \theta/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta/2 - \alpha/2 <  \theta/2 + \pi/2$. We find that this new profile only exists if $ \alpha < 4\pi - 2 \theta$. This inequality defines the line separating models SE2 and its neighbouring model, SE3.
 
 gREM submodel specifications were done by hand, and the integration was done using SymPy \citep{sympy} in Python (Appendix S3). The gREM submodels were checked by confirming that: 1) submodels adjacent in parameter space were equal at the boundary between them; 2) submodels that border $ \alpha = 0$ had$p = 0$ when $ \alpha = 0$; 3) average profile widths $\bar{p}$ were between 0 and $2r$ and; 4) each integral, divided by the range of angles that it was integrated over, was between 0 and $2r$. The scripts for these tests are included in Appendix S3 and the R \citep{R} implementation of the gREM is given in Appendix S4.  
 
 \subsection{Simulation Model}
 
-We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. 100 simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries). A stationary sensor of radius $r$ was set up in the exact centre of each simulation, covering 7 sensor detection widths $\theta$ between 0 and $2\pi$( $2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, $2\pi$). Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}. This density was chosen as it is approximately the expected density of mammals animals weighing \SI{1}{\gram} calculated form the equation in \cite{damuth1981population}. This created a total of 3937 individuals per simulation which were placed randomly at the start of the simulation. Individuals were assigned x signal detection widths $\alpha$ between 0 and $\pi$ (x,x,x,x,x).
+We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. 100 simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries). A stationary sensor of radius $r$ was set up in the exact centre of each simulation, covering 7 sensor detection widths $\theta$ between 0 and $2\pi$( $2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, $2\pi$). Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}. This density was chosen as it is approximately the expected density of mammals animals weighing \SI{1}{\gram} calculated form the equation in \cite{damuth1981population}. This created a total of 3937 individuals per simulation which were placed randomly at the start of the simulation. Individuals were assigned 9 signal detection widths $\alpha$ between 0 and $\pi$ (x,x,x,x,x).
 
-Each simulation lasted for $N$ steps (xx) of duration $T$ (15 minutes) giving a total duration of 150 days. The individuals moved within each step with a distance $d$, with an average speed, $v$. $d$, was sampled from a normal distribution with mean distance, $\mu_d = vT$, and standard deviation $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. At the end step, individuals were allowed to either remain stationary for a time step (with a given probability, $S$), change direction ($A$) between 0 and $\pi$. This resulted in 7 different movement models where: (1) simple movement, where $S$ and $A$ = 0; (2)stop-start movement, where (i) $S$ = 0.25, $A$ = 0, (ii) $S$ = 0.5, $A$ = 0, (iii) $S$ = 0.75, $A$ = 0; (3) random walk movement, where (i) $S$ = 0, $A$ = $\pi/3$, (ii) $S$ = 0, $A$ = $2\pi/3$, iii) $S$ = 0, $A$ = $\pi$.  
+Each simulation lasted for $N$ steps (xx) of duration $T$ (15 minutes) giving a total duration of 150 days. The individuals moved within each step with a distance $d$, with an average speed, $v$. $d$, was sampled from a normal distribution with mean distance, $\mu_d = vT$, and standard deviation $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. At the end step, individuals were allowed to either remain stationary for a time step (with a given probability, $S$), change direction (with a maximum angle, $A$) between 0 and $\pi$. This resulted in 7 different movement models where: (1) simple movement, where $S$ and $A$ = 0; (2)stop-start movement, where (i) $S$ = 0.25, $A$ = 0, (ii) $S$ = 0.5, $A$ = 0, (iii) $S$ = 0.75, $A$ = 0; (3) random walk movement, where (i) $S$ = 0, $A$ = $\pi/3$, (ii) $S$ = 0, $A$ = $2\pi/3$, iii) $S$ = 0, $A$ = $\pi$.  
 Individuals were counted as they moved in and out of the detection zone of the sensor per simulation. 
 
 We calculated the estimated animal density from the gREM by summing the number of captures per simulation and inputting these values into the correct gREM submodel. gREM accuracy was determined by comparing the density in the simulation with the estimated density. High accuracy is indicated by the mean difference between the estimated and actual values converging to zero as sample size increases. gREM precision was determined by the standard deviation of estimated densities. We constructed box plots of the error between real and estimated densities to graphically test for accuracy and precision. 
@@ -246,7 +246,7 @@ Although more thorough checks are performed in Appendix S3, it can be seen that 
 \begin{figure}
 	\centering
 	\includegraphics[width=7cm]{imgs/equalModelResults.pdf}
-	\caption{Equations for the profile wide, $\bar{p}$, given sensor and signal widths. Each colour block represents one equation, despite independent derivation within each block, many models result in the same expression. These are collected together and presented as one block of colour.}
+	\caption{Equations for the average profile wide, $\bar{p}$, given sensor and signal widths. Each colour block represents one equation, despite independent derivation within each block, many models result in the same expression. These are collected together and presented as one block of colour.}
 	\label{f:equalModelResults}
 \end{figure}
 
@@ -254,7 +254,7 @@ Although more thorough checks are performed in Appendix S3, it can be seen that 
 
 \subsection{Simulation model}
 
-For each model we compared the estimated densities to the true densities in a simulation. None of the models showed any evidence of any significant differences between the estimated and true density values (Figure~\ref{f:ModelBias}). The precision of the models do vary however. The standard deviation of the error is strongly related to the call and sensor width (Figure~\ref{f:StandardDevaition}), such that larger widths have greater precision. However, even the models with small call and sensor angles have a relativity high level of precision. 
+For each model we compared the estimated densities to the true densities in a simulation. None of the models showed any evidence of any significant differences between the estimated and true density values (Figure~\ref{f:ModelBias}). The precision of the models do vary however. The standard deviation of the error is strongly related to the sensor and signal width (Figure~\ref{f:StandardDevaition}), such that larger widths have greater precision. However, even the models with smaller sensor and signal widths have a relativity high level of precision. 
 
 \begin{figure}
 	\centering
@@ -269,7 +269,11 @@ For each model we compared the estimated densities to the true densities in a si
 		\label{f:StandardDevaition}
 		\caption{} 
         \end{subfigure}
-        \caption{The precision of the gREM given a range of detection and call angles. The standard deviation of the percentage error for sensor, and call angles between 0 and $2\pi$ where: $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. Where red indicates a high standard deviation and blue represents a low standard deviation.} 
+        \caption{
+        
+        The precision of the gREM given a range of detection and call angles. The standard deviation of the percentage error for sensor, and call angles between 0 and $2\pi$ where: $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. Where red indicates a high standard deviation and blue represents a low standard deviation.
+        
+        } 
 	\label{f:AccAndPrec}
 \end{figure}
 
@@ -280,7 +284,7 @@ For each model we compared the estimated densities to the true densities in a si
        \centering
 	\includegraphics[width=7cm]{imgs/ResultsNoCaptures.pdf}
            \label{f:Captures}
-        \caption{Accuracy of the gREM reminds unchanged, whilst precision increases, with captures. Boxplots of four test models when given different numbers of captures where: $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models. Where the model names refer to Figure 1 in Appendix S2.} 
+        \caption{Accuracy of the gREM reminds unchanged, whilst precision increases, with captures. Box plots of four test models when given different numbers of captures where: $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models. Where the model names refer to Figure 1 in Appendix S2.} 
 \end{figure}
 
 The precision of the model is dependent on the number of captures during the survey. In Figure~\ref{f:Captures} we can see that the model precision gets greater as the number of captures increase. As the number of captures reaches about 100 then the coefficient of variation falls below 10\% which could be considered negligible. %The number of captures is highly dependent on the speed of the animals, the size of the detection zone, and the length of the survey, as these values increase the number of captures is also likely to increase. 
